# kompot

./: .gitignore  MANIFEST.in  README.md  codecov.yml  detailed_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple_test.py  test_batch_logic.py  test_fixes.py  test_fixes_after_code_changes.py  test_log_level.py  test_tutorial.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scientific_question.md
.github/workflows/: tests.yml
docs/: README.md  requirements.txt
docs/source/: anndata.rst  conf.py  differential.rst  examples  index.rst  plotting.rst  reporter.rst  utils.rst
docs/source/_static/: custom.css
examples/: basic_example.py  embedding_example.py  gene_expression_example.py  generate_report.py  heatmap_diagonal_test.py  heatmap_example.py  heatmap_improve_test.py  heatmap_test.py  sample_specific_variance.py  sample_specific_variance_nn.py  volcano_da_example.py  volcano_plot_example.py
examples/direction_plots/: direction_barplot.py
kompot/: __init__.py  batch_utils.py  differential.py  memory_utils.py  utils.py
kompot/anndata/: __init__.py  core.py  differential_abundance.py  differential_expression.py  functions.py  workflows.py
kompot/differential/: __init__.py  differential_abundance.py  differential_expression.py  sample_variance_estimator.py  utils.py
kompot/plot/: __init__.py  embedding.py  expression.py  heatmap.py  volcano.py
kompot/plot/heatmap/: __init__.py  core.py  direction_plot.py  utils.py  visualization.py
kompot/reporter/: __init__.py  html_generator.py
kompot/reporter/components/: __init__.py
kompot/reporter/templates/: base.html
kompot/reporter/templates/css/: styles.css
kompot/reporter/templates/js/: kompot_report.js
test_nan_mahalanobis/: debug_compute_mahalanobis.py  reproduce_nan_mahalanobis.py
tests/: __init__.py  test_anndata_functions.py  test_batch_utils.py  test_dask_de_comparison.py  test_dask_vs_no_dask.py  test_differential.py  test_embedding_plot.py  test_heatmap_utils.py  test_mahalanobis_approaches.py  test_memory_utils.py  test_plot_functions.py  test_reporter.py  test_reporter_integration.py  test_sample_variance.py  test_sample_variance_dask_backend.py  test_sample_variance_with_differential.py  test_ui_components.py  test_utils.py
