[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kompot"]
package-dir = {"" = "."}
package-data = {"kompot" = ["**/*.png", "**/*.csv"]}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "kompot.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kompot --cov-report=xml --cov-report=term-missing"

[project]
name = "kompot"
dynamic = ["version"]
description = "Differential abundance and gene expression analysis using Mahalanobis distance with JAX backend"
readme = "README.md"
authors = [
    {name = "Dominik Otto", email = "dotto@fredhutch.org"},
]
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "jax>=0.3.0",
    "jaxlib>=0.3.0",
    "mellon>=1.6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "tqdm>=4.60.0",
    "anndata>=0.8.0",
    "pynndescent>=0.5.0",
    "python-igraph>=0.10.0",
    "leidenalg>=0.9.0",
    "psutil>=5.9.0",
    "importlib-resources>=5.0.0; python_version < '3.9'",
]

[project.urls]
"Homepage" = "https://github.com/settylab/kompot"
"Documentation" = "https://kompot.readthedocs.io/"
"Bug Tracker" = "https://github.com/settylab/kompot/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "nbsphinx>=0.9.0",
    "furo>=2024.0.0",
    "sphinx-autodocgen>=1.0.0",
    "sphinx-github-style>=1.2.0",
    "lxml[html_clean]",
    "IPython",
]
plot = [
    "scanpy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
recommended = [
    "palantir>=1.0.0",
    "dask>=2024.4.0",
]
dask = [
    "dask>=2024.4.0",
]
all = [
    "scanpy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "palantir>=1.0.0",
    "dask>=2024.4.0",
]
