[metadata]
name = kompot
description = Differential abundance and gene expression analysis using Mahalanobis distance with JAX backend
author = Dominik Otto
author_email = dotto@fredhutch.org
license = GNU GPL v3
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    jax>=0.3.0
    jaxlib>=0.3.0
    mellon>=1.5.0
    pynndescent>=0.5.0
    python_igraph>=0.10.0
    leidenalg>=0.9.0
python_requires = >=3.7
package_dir =
    = .
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    mypy>=1.0.0
    flake8>=6.0.0
recommended =
    palantir>=1.0.0

[options.package_data]
kompot = py.typed

[flake8]
max-line-length = 100
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py